--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "c3": "^0.4.18",
     "c3-react": "^0.1.13",
+    "mongoose": "^4.13.4",
     "react": "^16.1.1",
     "react-c3js": "^0.1.20",
     "react-dom": "^16.1.1"
