--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "mongoose": "^4.13.4",
     "react": "^16.1.1",
     "react-c3js": "^0.1.20",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "semantic-ui-react": "^0.76.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.17"
